[gd_scene load_steps=15 format=2]

[ext_resource path="res://GodotCredits.gd" type="Script" id=1]
[ext_resource path="res://art/OST/Lunette's Song.wav" type="AudioStream" id=2]
[ext_resource path="res://fonts/WILLOW__.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://art/Other/Demo End Screen.png" type="Texture" id=4]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/NameFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://art/Other/End Screen Arrow.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 40
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1112, 1069 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1112, 1069 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1112, 1069 )

[sub_resource type="Animation" id=4]
resource_name = "Fade In"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="GodotCredits" type="Node2D"]
scale = Vector2( 1.00208, 1 )
z_index = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1282.0
margin_bottom = 719.0
color = Color( 0, 0, 0, 0 )

[node name="CreditsContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1278.0
margin_bottom = 720.0

[node name="Line" type="Label" parent="CreditsContainer"]
anchor_right = 1.0
margin_top = 704.0
margin_right = -11.0
margin_bottom = 718.0
size_flags_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 10
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 205.572
margin_top = 226.0
margin_right = 1109.57
margin_bottom = 445.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "THANK YOU FOR PLAYING!"
align = 1
valign = 1

[node name="CreditsMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 3.0
autoplay = true

[node name="Thank_You" type="Sprite" parent="."]
visible = false
position = Vector2( 639.171, 360 )
scale = Vector2( 0.332901, 0.333333 )
texture = ExtResource( 4 )

[node name="Kickstarter" type="LinkButton" parent="Thank_You"]
margin_left = -1797.0
margin_top = -744.0
margin_right = -1245.0
margin_bottom = -192.0

[node name="Steam" type="LinkButton" parent="Thank_You"]
margin_left = -1141.01
margin_top = -744.0
margin_right = -589.007
margin_bottom = -192.0

[node name="Tiktok" type="LinkButton" parent="Thank_You"]
margin_left = 630.995
margin_top = -909.0
margin_right = 990.995
margin_bottom = -549.0

[node name="Instagram" type="LinkButton" parent="Thank_You"]
margin_left = 630.998
margin_top = -345.0
margin_right = 990.998
margin_bottom = 15.0

[node name="Youtube" type="LinkButton" parent="Thank_You"]
margin_left = 1042.0
margin_top = -903.0
margin_right = 1402.0
margin_bottom = -543.0

[node name="Threads" type="LinkButton" parent="Thank_You"]
margin_left = 1042.0
margin_top = -345.0
margin_right = 1402.0
margin_bottom = 15.0

[node name="X" type="LinkButton" parent="Thank_You"]
margin_left = 1455.0
margin_top = -897.0
margin_right = 1815.0
margin_bottom = -537.0

[node name="Tumblr" type="LinkButton" parent="Thank_You"]
margin_left = 1454.99
margin_top = -345.0
margin_right = 1814.99
margin_bottom = 15.0

[node name="Continue" type="Button" parent="Thank_You"]
margin_left = 1608.0
margin_top = 912.0
margin_right = 1872.0
margin_bottom = 1056.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )

[node name="End_Screen_Anim" type="AnimationPlayer" parent="Thank_You"]
"anims/Fade In" = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="pressed" from="Thank_You/Kickstarter" to="." method="_on_Kickstarter_pressed"]
[connection signal="pressed" from="Thank_You/Steam" to="." method="_on_Steam_pressed"]
[connection signal="pressed" from="Thank_You/Tiktok" to="." method="_on_Tiktok_pressed"]
[connection signal="pressed" from="Thank_You/Instagram" to="." method="_on_Instagram_pressed"]
[connection signal="pressed" from="Thank_You/Youtube" to="." method="_on_Youtube_pressed"]
[connection signal="pressed" from="Thank_You/Threads" to="." method="_on_Threads_pressed"]
[connection signal="pressed" from="Thank_You/X" to="." method="_on_X_pressed"]
[connection signal="pressed" from="Thank_You/Tumblr" to="." method="_on_Tumblr_pressed"]
[connection signal="pressed" from="Thank_You/Continue" to="." method="_on_Continue_pressed"]
